--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"million": "^3.0.6",
+		"next": "14.1.4",
 		"react": "^18",
-		"react-dom": "^18",
-		"next": "14.1.4"
+		"react-dom": "^18"
 	},
 	"devDependencies": {
-		"typescript": "^5",
 		"@types/node": "^20",
 		"@types/react": "^18",
-		"@types/react-dom": "^18"
+		"@types/react-dom": "^18",
+		"typescript": "^5"
 	}
 }
